Fixed border on menu wrap causing horizontal scroll bar.

--- a/sites/all/themes/ostemnational/css/main.scss
+++ b/sites/all/themes/ostemnational/css/main.scss
@@ -147,6 +147,8 @@ header {
 	@include box-shadow(0 0 10px black(.7));
 	height: 47px;
 	border: 1px solid rgb(128,128,128);
+	border-left: 0;
+	border-right: 0;
 	
 	> .region {
 		width: 960px;
